[ADD]Valores, Sobre mi, colores

--- a/contacto.html
+++ b/contacto.html
@@ -39,7 +39,7 @@
 
             <div class="logo">
                 <a href="index.html">
-                    <img src="./material_grafico/Imagotipo/Wally-Imagotipo-V2--Crema-Rosado.png" alt="Logo" class="user-block__logo">
+                    <img src="./material_grafico/logotipo/Wally-Logotipo-V1-Crema.png" alt="Logo" class="user-block__logo">
                 </a>
             </div>
 
@@ -50,7 +50,10 @@
                             <a class="main-nav__link" href="./index.html" data-destino="inicio">Inicio</a>
                         </li>
                         <li class="main-nav__item main-nav__link-activo ">
-                            <a class="main-nav__link" href="./valores.html" data-destino="valores">Valores</a>
+                            <a class="main-nav__link" href="./servicios.html" data-destino="valores">Servicios</a>
+                        </li>
+                        <li class="main-nav__item main-nav__link-activo">
+                            <a class="main-nav__link" href="./sobre-mi.html" data-destino="contacto">Sobre mi</a>
                         </li>
                         <li class="main-nav__item main-nav__link-activo link-activo">
                             <a class="main-nav__link" href="./contacto.html" data-destino="contacto">Contacto</a>
@@ -64,7 +67,7 @@
                 <ul class="nav-rrss">
                     <li class="nav-rrss__item">
                         <a class="nav-rrss__item-link"
-                            href="https://open.spotify.com/playlist/0U44osC9GK05mbAX3j4zyu?si=12c48744a6e1476a"
+                            href="https://spotify.link/dqPvOKqxoDb"
                             target="_blank"><i class="bi bi-spotify"></i></a>
                     </li>
                 </ul>
@@ -192,7 +195,7 @@
                 <ul class="footer-rrss">
                     <li class="nav-rrss__item">
                         <a class="nav-rrss__item-link"
-                            href="https://open.spotify.com/playlist/0U44osC9GK05mbAX3j4zyu?si=12c48744a6e1476a"
+                            href="https://spotify.link/dqPvOKqxoDb"
                             target="_blank"><i class="bi bi-spotify"></i></a>
                     </li>
                     <li class="nav-rrss__item">
@@ -200,7 +203,7 @@
                                 class="bi bi-instagram"></i></a>
                     </li>
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link" href="https://wa.me/985644253?text=Hola,%20que%20tal?"
+                        <a class="nav-rrss__item-link" href="https://wa.me/971704471?text=Hola,%20que%20tal?"
                             target="_blank"><i class="bi bi-whatsapp"></i></a>
                     </li>
                 </ul>
