--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <a class="main-nav__link" href="faqs.html" data-destino="faqs">FAQ's</a>
                         </li> -->
                         <li class="main-nav__item main-nav__link-activo">
-                            <a class="main-nav__link" href="./valores.html" data-destino="contacto">Valores</a>
+                            <a class="main-nav__link" href="./servicios.html" data-destino="contacto">Servicios</a>
                         </li>
                         <li class="main-nav__item main-nav__link-activo">
                             <a class="main-nav__link" href="./sobre-mi.html" data-destino="contacto">Sobre mi</a>
@@ -66,7 +66,7 @@
                 <ul class="nav-rrss">
                     <li class="nav-rrss__item">
                         <a class="nav-rrss__item-link"
-                            href="https://open.spotify.com/playlist/0U44osC9GK05mbAX3j4zyu?si=12c48744a6e1476a"
+                            href="https://spotify.link/dqPvOKqxoDb"
                             target="_blank"><i class="bi bi-spotify"></i></a>
                     </li>
                 </ul>
@@ -85,10 +85,10 @@
 
         <section class="container-trabajos">
             <div class="trabajos-titulo">
-                <h1>Producciones</h1>
+                <h1>Prod. x aquíestawally</h1>
             </div>
             <div class="trabajos-subtitulo">
-                <h2>Artistas que han confiado en nuestro trabajo</h2>
+                <h2>Una selección de trabajos realizados desde 2018 a la fecha, a los que les tengo mucho cariño</h2>
             </div>
             <div class="container-mastering__img">
 
@@ -131,7 +131,7 @@
         <div class="descripcion-footer">
             <div class="secciones-footer">
                 <ul class="secciones-footer__list">
-                    <li><a href="mailto:viejomastering@gmail.com">correo@gmail.com</a></li>
+                    <li><a href="mailto:wallyproduccionmusical@gmail.com">wallyproduccionmusical@gmail.com</a></li>
                     <!-- <li><a href="https://viejomastering.wordpress.com/">Blog</a></li> -->
                     <li><a href="./contacto.html">Contacto </a></li>
                 </ul>
@@ -140,7 +140,7 @@
                 <ul class="footer-rrss">
                     <li class="nav-rrss__item">
                         <a class="nav-rrss__item-link"
-                            href="https://open.spotify.com/playlist/0U44osC9GK05mbAX3j4zyu?si=12c48744a6e1476a"
+                            href="https://spotify.link/dqPvOKqxoDb"
                             target="_blank"><i class="bi bi-spotify"></i></a>
                     </li>
                     <li class="nav-rrss__item">
@@ -148,7 +148,7 @@
                                 class="bi bi-instagram"></i></a>
                     </li>
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link" href="https://wa.me/985644253?text=Hola,%20que%20tal?"
+                        <a class="nav-rrss__item-link" href="https://wa.me/+971704471?text=Hola,%20que%20tal?"
                             target="_blank"><i class="bi bi-whatsapp"></i></a>
                     </li>
                 </ul>
