--- a/servicios.html
+++ b/servicios.html
@@ -38,8 +38,7 @@
         <div class="contenedor-main">
             <div class="logo">
                 <a href="./index.html">
-                    <img src="./material_grafico/Imagotipo/Wally-Imagotipo-V2--Crema-Rosado.png" alt="Logo"
-                        class="user-block__logo">
+                    <img src="./material_grafico/logotipo/Wally-Logotipo-V1-Crema.png" alt="Logo" class="user-block__logo">
                 </a>
             </div>
 
@@ -50,7 +49,10 @@
                             <a class="main-nav__link" href="./index.html" data-destino="inicio">Inicio</a>
                         </li>
                         <li class="main-nav__item main-nav__link-activo link-activo">
-                            <a class="main-nav__link" href="#valores" data-destino="valores">Valores</a>
+                            <a class="main-nav__link" href="#servicios" data-destino="servicios">Servicios</a>
+                        </li>
+                        <li class="main-nav__item main-nav__link-activo">
+                            <a class="main-nav__link" href="./sobre-mi.html" data-destino="contacto">Sobre mi</a>
                         </li>
                         <li class="main-nav__item main-nav__link-activo">
                             <a class="main-nav__link" href="./contacto.html" data-destino="contacto">Contacto</a>
@@ -63,7 +65,7 @@
                 <ul class="nav-rrss">
                     <li class="nav-rrss__item">
                         <a class="nav-rrss__item-link"
-                            href="https://open.spotify.com/playlist/0U44osC9GK05mbAX3j4zyu?si=12c48744a6e1476a"
+                            href="https://spotify.link/dqPvOKqxoDb"
                             target="_blank"><i class="bi bi-spotify"></i></a>
                     </li>
                 </ul>
@@ -85,16 +87,31 @@
             <div class="main-faqs">
                 <div class="faqs-lista">
                     <div class="faqs-lista__preguntas">
-                        <h3>Produccion</h3><i class="bi bi-chevron-down"></i>
+                        <h3>Producción Completa</h3><i class="bi bi-chevron-down"></i>
                     </div>
                     <div class="faqs-lista__descripcion">
                         <div class="faqs-lista-contenido">
                             <p>
-                                $
+                                Valor $280.000
                             </p>
-                            <p>
-                                $
-                            </p>
+                            <ul>
+                                <li>
+                                    <p> Revisión/Composición del arreglo instrumental</p>
+
+                                </li>
+                                <li>
+                                    <p> Grabación en el estudio “La Casa de la Olguita”</p>
+                                </li>
+                                <li>
+                                    <p> Grabación en RoomStudios (Rancagua, solo baterías) </p>
+                                </li>
+                                <li>
+                                    <p> Edición</p>
+                                </li>
+                                <li>
+                                    <p> Mezcla</p>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                     <div class="faqs-lista__preguntas">
@@ -103,68 +120,66 @@
                     <div class="faqs-lista__descripcion">
                         <div class="faqs-lista-contenido">
                             <p>
-                                Algunas recomendaciones al momento de enviar los archivos son las siguientes:
+                                $85.000
                             </p>
-                            <!-- <ul>
+                            <ul>
                                 <li>
-                                    <p> Es recomenado mandar los archivos en <strong>.wav 24bits.</strong></p>
+                                    <p> Incluye 3 revisiones </p>
 
                                 </li>
                                 <li>
-                                    <p> Exportar la mezcla en la misma frecuencia de muestro en que se trabajo la mezcla
-                                        <strong>(44.1, 48, 88.2, 96khz, etc).</strong>
-                                    </p>
+                                    <p> Entrega de multitracks/Stems al final del proceso</p>
                                 </li>
-                                <li>
-                                    <p> Es recomendado dejar cierto rango dinamico para trabajar. Que los peaks lleguen
-                                        a
-                                        <strong>-6dBFS.</strong> Si por motivos esteticos superan esta recomendacion,
-                                        esta
-                                        bien y hagalo saber.
-                                    </p>
-                                </li>
-                                <li>
-                                    <p> Si necesita masterizar más de una canción, envielas enumeradas y también indique
-                                        si
-                                        alguna de esas es un single
-                                        <strong>(01-cancion, 02-cancion2(single)).</strong>
-                                    </p>
-                                </li>
-                            </ul> -->
+                            </ul>
                         </div>
                     </div>
                     <div class="faqs-lista__preguntas">
-                        <h3>¿etc?</h3><i class="bi bi-chevron-down"></i>
+                        <h3>Horas de grabación</h3><i class="bi bi-chevron-down"></i>
                     </div>
                     <div class="faqs-lista__descripcion">
                         <div class="faqs-lista-contenido">
                             <p>
-                                Para enviar las mezclas o realizar cualquier consulta rellene el siguiente formulario de
-                                <strong> <a href="./contacto.html">contacto</a>
-                                </strong>
+                                En el estudio “La Casa de la Olguita”
                             </p>
-                            <p>
-                                Ante cualquier duda contactece al correo
-                                <strong> <a href="mailto:viejomastering@gmail.com">correo@gmail.com</a>
-                                </strong>
-                            </p>
+                            <ul>
+                                <li>
+                                    <p> $50.000 (6 horas) </p>
+
+                                </li>
+                                <li>
+                                    <p> $20.000 (2 horas)</p>
+                                </li>
+
+                            </ul>
                         </div>
                     </div>
                     <div class="faqs-lista__preguntas">
-                        <h3>¿pregunta?</h3><i class="bi bi-chevron-down"></i>
+                        <h3>Revisión de mezclas/producciones</h3><i class="bi bi-chevron-down"></i>
                     </div>
                     <div class="faqs-lista__descripcion">
                         <div class="faqs-lista-contenido">
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus hic eos vero sit quo
-                                assumenda inventore tempore dolor ipsum ad iste enim dignissimos neque, mollitia, at,
-                                earum fugit veniam repellendus?
-                            </p>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta iusto mollitia obcaecati
-                                voluptas? Odit expedita accusamus soluta totam voluptatibus provident impedit, quae enim
-                                esse possimus nihil non mollitia magni qui.
-                            </p>
+
+                            <ul>
+                                <li>
+                                    <p> Videollamada a través de la plataforma “Muse Sessions” </p>
+
+                                </li>
+
+
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="faqs-lista__preguntas">
+                        <h3>Clases particulares</h3><i class="bi bi-chevron-down"></i>
+                    </div>
+                    <div class="faqs-lista__descripcion">
+                        <div class="faqs-lista-contenido">
+                            <ul>
+                                <li>
+                                    <p>Valor: $60.000 (4 clases)
+                                    </p>
+                                </li>
+                            </ul>
                         </div>
                     </div>
 
@@ -180,7 +195,7 @@
         <div class="descripcion-footer">
             <div class="secciones-footer">
                 <ul class="secciones-footer__list">
-                    <li><a href="mailto:viejomastering@gmail.com">correo@correo.com</a></li>
+                    <li><a href="mailto:wallyproduccionmusical@gmail.com">wallyproduccionmusical@gmail.com</a></li>
                     <!-- <li><a href="https://viejomastering.wordpress.com/">Blog</a></li> -->
                     <li><a href="./contacto.html">Contacto </a></li>
                 </ul>
@@ -189,7 +204,7 @@
                 <ul class="footer-rrss">
                     <li class="nav-rrss__item">
                         <a class="nav-rrss__item-link"
-                            href="https://open.spotify.com/playlist/0U44osC9GK05mbAX3j4zyu?si=12c48744a6e1476a"
+                            href="https://spotify.link/dqPvOKqxoDb"
                             target="_blank"><i class="bi bi-spotify"></i></a>
                     </li>
                     <li class="nav-rrss__item">
@@ -197,15 +212,15 @@
                                 class="bi bi-instagram"></i></a>
                     </li>
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link" href="https://wa.me/985644253?text=Hola,%20que%20tal?"
+                        <a class="nav-rrss__item-link" href="https://wa.me/971704471?text=Hola,%20que%20tal?"
                             target="_blank"><i class="bi bi-whatsapp"></i></a>
                     </li>
                 </ul>
             </div>
         </div>
-        <div class="bajada-footer">
+        <!-- <div class="bajada-footer">
             <p class="firma-fdiazg-dev"> fdiazg.dev 👋</p>
-        </div>
+        </div> -->
     </footer>
 
     <!-- <script src="../js/app.js"></script> -->
