[FIX]links insta y correo

--- a/contacto.html
+++ b/contacto.html
@@ -53,7 +53,7 @@
                             <a class="main-nav__link" href="./servicios.html" data-destino="valores">Servicios</a>
                         </li>
                         <li class="main-nav__item main-nav__link-activo">
-                            <a class="main-nav__link" href="./sobre-mi.html" data-destino="contacto">Sobre mi</a>
+                            <a class="main-nav__link" href="./sobre-mi.html" data-destino="contacto">Sobre mí</a>
                         </li>
                         <li class="main-nav__item main-nav__link-activo link-activo">
                             <a class="main-nav__link" href="./contacto.html" data-destino="contacto">Contacto</a>
@@ -186,7 +186,7 @@
         <div class="descripcion-footer">
             <div class="secciones-footer">
                 <ul class="secciones-footer__list">
-                    <li><a href="mailto:viejomastering@gmail.com">correo@gmail.com</a></li>
+                    <li><a href="mailto:wallyproduccionmusical@gmail.com">wallyproduccionmusical@gmail.com</a></li>
                     <!-- <li><a href="https://viejomastering.wordpress.com/">Blog</a></li> -->
                     <li><a href="#">Contacto </a></li>
                 </ul>
@@ -199,7 +199,7 @@
                             target="_blank"><i class="bi bi-spotify"></i></a>
                     </li>
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link" href="https://www.instagram.com/viejo_mastering/"><i
+                        <a class="nav-rrss__item-link" href="https://www.instagram.com/aquiestawally/"><i
                                 class="bi bi-instagram"></i></a>
                     </li>
                     <li class="nav-rrss__item">
