--- a/servicios.html
+++ b/servicios.html
@@ -52,7 +52,7 @@
                             <a class="main-nav__link" href="#servicios" data-destino="servicios">Servicios</a>
                         </li>
                         <li class="main-nav__item main-nav__link-activo">
-                            <a class="main-nav__link" href="./sobre-mi.html" data-destino="contacto">Sobre mi</a>
+                            <a class="main-nav__link" href="./sobre-mi.html" data-destino="contacto">Sobre mí</a>
                         </li>
                         <li class="main-nav__item main-nav__link-activo">
                             <a class="main-nav__link" href="./contacto.html" data-destino="contacto">Contacto</a>
@@ -208,7 +208,7 @@
                             target="_blank"><i class="bi bi-spotify"></i></a>
                     </li>
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link" href="https://www.instagram.com/viejo_mastering/"><i
+                        <a class="nav-rrss__item-link" href="https://www.instagram.com/aquiestawally/"><i
                                 class="bi bi-instagram"></i></a>
                     </li>
                     <li class="nav-rrss__item">
