--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -54,7 +54,7 @@
             <div class="main-nav menu-toggle" id="main-nav">
                 <nav class="mastering-main-nav">
                     <ul class="main-nav__list">
-                        <li class="main-nav__item main-nav__link-activo link-activo">
+                        <li class="main-nav__item main-nav__link-activo ">
                             <a class="main-nav__link" href="./index.html" data-destino="inicio">Inicio</a>
                         </li>
                         <!-- <li class="main-nav__item main-nav__link-activo">
@@ -63,7 +63,7 @@
                         <li class="main-nav__item main-nav__link-activo">
                             <a class="main-nav__link" href="./servicios.html" data-destino="contacto">Servicios</a>
                         </li>
-                        <li class="main-nav__item main-nav__link-activo">
+                        <li class="main-nav__item main-nav__link-activo link-activo">
                             <a class="main-nav__link" href="#" data-destino="contacto">Sobre mí</a>
                         </li>
                         <li class="main-nav__item main-nav__link-activo">
@@ -234,7 +234,7 @@
                             target="_blank"><i class="bi bi-spotify"></i></a>
                     </li>
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link" href="https://www.instagram.com/viejo_mastering/"><i
+                        <a class="nav-rrss__item-link" href="https://www.instagram.com/aquiestawally/"><i
                                 class="bi bi-instagram"></i></a>
                     </li>
                     <li class="nav-rrss__item">
