--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <a class="main-nav__link" href="./servicios.html" data-destino="contacto">Servicios</a>
                         </li>
                         <li class="main-nav__item main-nav__link-activo">
-                            <a class="main-nav__link" href="./sobre-mi.html" data-destino="contacto">Sobre mi</a>
+                            <a class="main-nav__link" href="./sobre-mi.html" data-destino="contacto">Sobre mí</a>
                         </li>
                         <li class="main-nav__item main-nav__link-activo">
                             <a class="main-nav__link" href="./contacto.html" data-destino="contacto">Contacto</a>
@@ -144,7 +144,7 @@
                             target="_blank"><i class="bi bi-spotify"></i></a>
                     </li>
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link" href="https://www.instagram.com/viejo_mastering/"><i
+                        <a class="nav-rrss__item-link" href="https://www.instagram.com/aquiestawally/"><i
                                 class="bi bi-instagram"></i></a>
                     </li>
                     <li class="nav-rrss__item">
